fixed bottom frame to align

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ main {
 .heading {
   font-family: 'Lobster', cursive;
   font-size: 70px;
-  color: #FFED66;
+  color: #f8f801a8;
   text-align: center;
   margin: 0;
   line-height: 1;
@@ -40,7 +40,6 @@ main {
   justify-content: space-evenly;
   align-items: center;
   margin: 0 auto;
-  padding: 0 80px;
   width: 1079px;
   height: 100px;
   background-color: #FF5E5B;
@@ -97,7 +96,7 @@ main {
   border-width: 6px 100px 0;
   grid-gap: 1px;
   background-color: #AAAAAA;
-  /* cursor: crosshair; */
+  cursor: crosshair;
 }
 
 #grid-container > div {
